[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[node name="Node" type="Node"]

script = ExtResource( 1 )
coinScene = ExtResource( 2 )

[node name="Player" parent="." index="0" instance=ExtResource( 3 )]

position = Vector2( 199.284, 492.713 )
scale = Vector2( 0.475073, 0.475073 )

[node name="GameplayTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="HUD" parent="." index="2" instance=ExtResource( 4 )]

[node name="Coins" type="Node" parent="." index="3"]

[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]

[connection signal="timeout" from="GameplayTimer" to="." method="_on_GameplayTimer_timeout"]

[connection signal="game_start" from="HUD" to="." method="startGame"]


